--- a/BackBaseTest/BackBaseTest/test-output/index.html
+++ b/BackBaseTest/BackBaseTest/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\pknayak\AppData\Local\Temp\testng-eclipse--1217773379\testng-customsuite.xml</span>
+                    <span>testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.backbase.automation.testcases.BackBaseEdgeTest" hash-for-method="checkUpdateComputerByRemovingComputerNameFromDatabase">checkUpdateComputerByRemovingComputerNameFromDatabase</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.backbase.automation.testcases.BackBaseCRUDTest" hash-for-method="createReadAndDeleteComputerFromDatabase">createReadAndDeleteComputerFromDatabase</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.backbase.automation.testcases.BackBaseEdgeTest</span>
+              <span class="class-name">com.backbase.automation.testcases.BackBaseCRUDTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="checkUpdateComputerByRemovingComputerNameFromDatabase">
-                  </a> <!-- checkUpdateComputerByRemovingComputerNameFromDatabase -->
-                  <span class="method-name">checkUpdateComputerByRemovingComputerNameFromDatabase</span>
+                  <a name="createReadAndDeleteComputerFromDatabase">
+                  </a> <!-- createReadAndDeleteComputerFromDatabase -->
+                  <span class="method-name">createReadAndDeleteComputerFromDatabase</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\pknayak\AppData\Local\Temp\testng-eclipse--1217773379\testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/nq/7pc23s853wn_m4t_n5_9lvzr0000gn/T/testng-eclipse--1032949714/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,11 +144,11 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.backbase.automation.testcases.BackBaseEdgeTest&quot;&gt;
+      &lt;class name=&quot;com.backbase.automation.testcases.BackBaseCRUDTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;checkUpdateComputerByRemovingComputerNameFromDatabase&quot;/&gt;
+          &lt;include name=&quot;createReadAndDeleteComputerFromDatabase&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.backbase.automation.testcases.BackBaseEdgeTest --&gt;
+      &lt;/class&gt; &lt;!-- com.backbase.automation.testcases.BackBaseCRUDTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -190,14 +190,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'checkUpdateComputerByRemovingComputerNameFromDatabase')
-data.setCell(0, 2, 'com.backbase.automation.testcases.BackBaseEdgeTest')
-data.setCell(0, 3, 73403);
+data.setCell(0, 1, 'createReadAndDeleteComputerFromDatabase')
+data.setCell(0, 2, 'com.backbase.automation.testcases.BackBaseCRUDTest')
+data.setCell(0, 3, 44492);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 44 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -212,23 +212,15 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">6 ignored methods</span>
+            <span class="header-content">2 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.backbase.automation.testcases.BackBaseEdgeTest</span>
+              <span class="ignored-class-name">com.backbase.automation.testcases.BackBaseCRUDTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">createAndReadComputerWithOnlyComputerNameFromDatabase</span>
+                <span class="ignored-method-name">updateAndReadComputerFromDatabase</span>
                 <br/>
-                <span class="ignored-method-name">checkCreationOfComputerWithoutComputerNameFromDatabase</span>
-                <br/>
-                <span class="ignored-method-name">cancelCreationOfComputerFromDatabase</span>
-                <br/>
-                <span class="ignored-method-name">checkSavingDuplicateComputersToDatabase</span>
-                <br/>
-                <span class="ignored-method-name">cancelUpdateComputerFromDatabase</span>
-                <br/>
-                <span class="ignored-method-name">createAndReadComputerWithoutDatesToDatabase</span>
+                <span class="ignored-method-name">creatReadUpdateAndDeleteComputerFromDatabase</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -240,18 +232,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.backbase.automation.testcases.BackBaseEdgeTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.backbase.automation.testcases.BackBaseCRUDTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">checkUpdateComputerByRemovingComputerNameFromDatabase</span>
-                <span class="method-start">10807 ms</span>
+                <span class="method-name">createReadAndDeleteComputerFromDatabase</span>
+                <span class="method-start">4220 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">84212 ms</span>
+                <span class="method-start">48713 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
