--- a/BackBaseTest/BackBaseTest/test-output/old/Default suite/methods.html
+++ b/BackBaseTest/BackBaseTest/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c4c875">  <td>18/12/12 00:49:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.backbase.automation.testcases.BackBaseEdgeTest@3fee9989]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1836797772</td>   <td></td> </tr>
-<tr bgcolor="f4a68b">  <td>18/12/12 00:49:58</td>   <td>10807</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BackBaseEdgeTest.checkUpdateComputerByRemovingComputerNameFromDatabase()[pri:7, instance:com.backbase.automation.testcases.BackBaseEdgeTest@3fee9989]">checkUpdateComputerByRemovingComputerNameFromDatabase</td> 
-  <td>main@1836797772</td>   <td></td> </tr>
-<tr bgcolor="c4c875">  <td>18/12/12 00:51:11</td>   <td>84211</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.backbase.automation.testcases.BackBaseEdgeTest@3fee9989]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1836797772</td>   <td></td> </tr>
+<tr bgcolor="79f379">  <td>18/12/12 02:39:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.backbase.automation.testcases.BackBaseCRUDTest@59494225]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@553871028</td>   <td></td> </tr>
+<tr bgcolor="80ebad">  <td>18/12/12 02:39:49</td>   <td>4219</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BackBaseCRUDTest.createReadAndDeleteComputerFromDatabase()[pri:1, instance:com.backbase.automation.testcases.BackBaseCRUDTest@59494225]">createReadAndDeleteComputerFromDatabase</td> 
+  <td>main@553871028</td>   <td></td> </tr>
+<tr bgcolor="79f379">  <td>18/12/12 02:40:33</td>   <td>48712</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.backbase.automation.testcases.BackBaseCRUDTest@59494225]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@553871028</td>   <td></td> </tr>
 </table>
